# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.18.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Allow also properties and variable names on the right-hand side
	  of comparisons or runtime variable assignments.
	- Store/show +- of IUSE.
	- Fix defaults in formatstrings (particularly for eix-diff).
	- Fix manpage: Add some forgotten properties.
	- Fix possible overflow in string assignment/comparison.
	- Improve parsing of <*:*>.
	- Fix implementation of -q which was broken in a subtle way.
	- Use fseek/ftell on systems without fseeko/ftello, and
	- improve error messages for failed permission tests,
	  for both see http://bugs.gentoo.org/show_bug.cgi?id=286229
	- ./configure: --with-null-device, get default EPREFIX by portageq.

*eix-0.18.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- XML output was implemented by
	  Bob Shaffer II <bob.shaffer.2 at gmail.com>
	  Thanks for the contribution.
	- Introduce runtime variables in format-string:
	  Now the format-string is almost a programming language;
	  without loops or recursion, but one can loop over versions:
	- Finally, dump the mess with available*/best*/installed*/empty*/full*
	  and the distinction of printable and "test-only" properties.
	  Instead of the flood of variations of properties for version output
	  there are now essentially only two properties with slight variations:
	  <availableversions:VAR> <installedversions:VAR>
	  They interpret the variable VAR for each version as a format.
	  Special properties like {last} are available in VAR to ease writing
	  separators between versions or in special cases.
	  Special care has been taken to parse VAR only once so that
	  eix should not be dramatically slower after this change.
	  Of course, a slight loss in the output speed was unavoidable, but
	  this should be worth the gained flexibility and especially the
	  simplification of writing formats.
	- For the previous empty*/full* use cases there are now example