@@ -5,6 +5,9 @@
 	- Allow also properties and variable names on the right-hand side
 	  of comparisons or runtime variable assignments.
 	- Store/show +- of IUSE.
+	- Change iuse/use output for --xml to reflect the new available data.
+	  Thanks to Bob Shaffer II <bob.shaffer.2 at gmail.com>
+	- Introduce {havecolliuse}
 	- Fix defaults in formatstrings (particularly for eix-diff).
 	- Fix manpage: Add some forgotten properties.
 	- Fix possible overflow in string assignment/comparison.
